new models on 6M dataset

--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d09f9c26-3e7d-40cc-869c-9f195069c60b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create necessary data \n",
-    "# eval_dataset_tool.prepare_dataset(EVAL_DATABASE_URL, LICHESS_EVAL_ARCHIVE) \n",
+    "# eval_dataset_tool.prepare_dataset(EVAL_DATABASE_URL, EVAL_DATASET_ARCHIVE) \n",
     "# elite_dataset_tool.prepare_dataset(ELITE_DATABASE_URL, ELITE_DATASET_ARCHIVE)\n",
     "# In this instance a lot of data can be discarded like the pvs lines\n",
     "# !sed -i 's/\"line\":\"[^\"]*\"/\"line\":\"\"/g' {eval_dataset_tool.dataset_file_name()} # remove not needed lines"
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "831b061d-ab9b-48ee-98a7-a63d3c379337",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "bb4bef8c-f309-429e-9e70-b612f3023e2b",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "26b2d09d-2011-4464-bf31-5ae3a2a3b857",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 13,
    "id": "da3aef17-0ff7-4d17-9e9f-1717d8dda222",
    "metadata": {},
    "outputs": [],
@@ -591,17 +591,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "id": "10bd41ea-a0ff-4996-acd2-f0059ea46a9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_generator_fen = DataGeneratorFEN(eval_dataset_tool, skip=0)"
+    "data_generator_fen = DataGeneratorFEN(eval_dataset_tool, skip=30_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 16,
    "id": "782b64e9-bb0b-47fc-850a-f6ffd50d0735",
    "metadata": {},
    "outputs": [
@@ -617,12 +617,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d03e521f9f654ff895c9e2a7818fb651",
+       "model_id": "85bc6d94d0424f8e8112aaebb736e630",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Positions:   0%|          | 0/1000000 [00:00<?, ?it/s]"
+       "Positions:   0%|          | 0/6000000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -632,14 +632,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Interrupted\n",
       "Done\n",
-      "Read 1509634 positions total\n",
-      "Written 1000000 positions\n"
+      "Read 1764757 positions total\n",
+      "Written 1699788 positions\n"
      ]
     }
    ],
    "source": [
-    "data_generator_fen.write(eval_dataset_tool.create_bitboard_path(1000000, 0, 19, 24), 1000000)"
+    "data_generator_fen.write(eval_dataset_tool.create_bitboard_path(1_000_000, 30_000_000, 0, 0), 6_000_000, 0, 9999999)"
    ]
   },
   {
