--- a/nn/train.ipynb
+++ b/nn/train.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "fe9d0fda-f33e-4313-850b-f3b640d2c201",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "b13750a6be5e8a69",
    "metadata": {
     "ExecuteTime": {
@@ -99,7 +99,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "91dc98ff-9857-4ec6-9c98-9550feba6472",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "608b0930c754cabd",
    "metadata": {
     "ExecuteTime": {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "e65a3c3f-e7a9-4c4f-96a6-9f5a53a8f947",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "b4677c52-9176-442b-97dc-b533b2a3edbb",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "13d423b5aec85db4",
    "metadata": {
     "ExecuteTime": {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "87ecc2ce56ba7086",
    "metadata": {
     "ExecuteTime": {
@@ -422,9 +422,6 @@
     "        self.epoch_print_interval = 1\n",
     "        \n",
     "    def train_one_epoch(self, model, optimizer, p=False) -> int:\n",
-    "        running_loss = 0.\n",
-    "        last_loss = 0.\n",
-    "    \n",
     "        for i, data in enumerate(self.train_dataloader):\n",
     "            inputs, labels = data\n",
     "            inputs, labels = inputs.to(device), labels.unsqueeze(1).to(device)\n",
@@ -436,17 +433,6 @@
     "            loss = self.loss_fn(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "    \n",
-    "            running_loss += loss.item()\n",
-    "            if i % self.print_every == self.print_every - 1:\n",
-    "                last_loss = running_loss / self.print_every\n",
-    "                if p: print(f\"  batch {i+1} loss: {last_loss}\")\n",
-    "                running_loss = 0.\n",
-    "            elif i == self.total_batches - 1:\n",
-    "                last_loss = running_loss / (i % self.print_every + 1)\n",
-    "                if p: print(f\"  batch {i+1} loss: {last_loss}\")\n",
-    "            \n",
-    "        return last_loss\n",
     "    \n",
     "    @timeit\n",
     "    def train(self, model, optimizer, epochs, p=True):\n",
@@ -461,7 +447,7 @@
     "            \n",
     "                # Make sure gradient tracking is on, and do a pass over the data\n",
     "                model.train(True)\n",
-    "                avg_loss = self.train_one_epoch(model, optimizer)\n",
+    "                self.train_one_epoch(model, optimizer)\n",
     "            \n",
     "                model.eval()\n",
     "    \n",
@@ -559,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "312630a8-dcbf-4dba-a0b6-e1a33f3e929a",
    "metadata": {},
    "outputs": [
@@ -569,24 +555,27 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = DenseNetwork(3, [768, 768, 256, 128, 1])\n",
+    "model = DenseNetwork(5, [768, 768, 512, 256, 128, 64, 1])\n",
+    "# model = DenseNetwork(3, [768, 768, 256, 128, 1])\n",
     "# model = DenseNetwork(2, [768, 256, 128, 1])\n",
     "# model = DenseNetwork(1, [768, 768, 1])\n",
     "# model = DenseNetwork(0, [768, 1])\n",
-    "model.load_state_dict(torch.load(\"models/1M/3l/Dense_768_768_256_128_1_b512_e50_lr0.01_m0.9_acc92.27\", map_location=\"cpu\"))"
+    "model.load_state_dict(torch.load(\"models/3K/5l/Dense_768_768_512_256_128_64_1_b512_e8_lr0.00216_m0.9_acc32.42\", map_location=\"cpu\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "id": "ffb4fac2-492b-4772-9db9-2bc21f95780f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2164,7 +2153,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
+   "id": "e207aecf-e3c9-429f-9e26-87239bfefe92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "<>:2: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "/tmp/ipykernel_8666/3375814861.py:2: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
+      "  model = DenseNetwork(35 [768, 768, 512, 256, 128, 64, 1])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# model = DenseNetwork(3, [768, 768, 256, 128, 1])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m model \u001b[38;5;241m=\u001b[39m DenseNetwork(\u001b[38;5;241;43m35\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m768\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m768\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m512\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m256\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m128\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      3\u001b[0m model\u001b[38;5;241m.\u001b[39mload_state_dict(torch\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels/3K/3l/Dense_768_768_256_128_1_b512_e50_lr0.00125_m0.9_acc35.94\u001b[39m\u001b[38;5;124m\"\u001b[39m, map_location\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "# model = DenseNetwork(3, [768, 768, 256, 128, 1])\n",
+    "model = DenseNetwork(35 [768, 768, 512, 256, 128, 64, 1])\n",
+    "model.load_state_dict(torch.load(\"models/3K/\", map_location=\"cpu\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "bcb51abc-7c85-47e2-9397-2a6982466a80",
    "metadata": {},
    "outputs": [
@@ -2172,7 +2195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All weights and biases have been saved to the 'models/weights/3l/92/' directory.\n"
+      "All weights and biases have been saved to the 'models/weights/3K/5l/' directory.\n"
      ]
     }
    ],
@@ -2190,7 +2213,7 @@
     "\n",
     "    print(f\"All weights and biases have been saved to the '{directory}' directory.\")\n",
     "\n",
-    "save_weights_to_csv(model, 'models/weights/3l/92/')"
+    "save_weights_to_csv(model, 'models/weights/3K/5l/')"
    ]
   },
   {
