--- a/nn/generate_data.ipynb
+++ b/nn/generate_data.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "831b061d-ab9b-48ee-98a7-a63d3c379337",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "63ca2cd8226ab9f0",
    "metadata": {
     "ExecuteTime": {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "bb4bef8c-f309-429e-9e70-b612f3023e2b",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4a92cda6044d7d19",
    "metadata": {
     "ExecuteTime": {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "26b2d09d-2011-4464-bf31-5ae3a2a3b857",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "da3aef17-0ff7-4d17-9e9f-1717d8dda222",
    "metadata": {},
    "outputs": [],
@@ -526,10 +526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "506a9d2d-eac1-4070-81dc-ffaeebeada17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data/games_dataset/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m evaluator \u001b[38;5;241m=\u001b[39m EvaluatePositions(STOCKFISH_AVX512_EXE, chess\u001b[38;5;241m.\u001b[39mengine\u001b[38;5;241m.\u001b[39mLimit(time\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.05\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m pgn_provider_games \u001b[38;5;241m=\u001b[39m \u001b[43mPGNProvider\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_dataset_tool\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgames_dataset_tool\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 5\u001b[0m, in \u001b[0;36mPGNProvider.from_dataset_tool\u001b[0;34m(self, dataset_tool, skip)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfrom_dataset_tool\u001b[39m(\u001b[38;5;28mself\u001b[39m, dataset_tool: DatasetTool, skip: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m PGNProvider(\u001b[43mdataset_tool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdataset_file_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m, skip\u001b[38;5;241m=\u001b[39mskip)\n",
+      "Cell \u001b[0;32mIn[5], line 64\u001b[0m, in \u001b[0;36mDatasetTool.dataset_file_name\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdataset_file_name\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m---> 64\u001b[0m     files \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mroot_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     66\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mfilter\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;129;01mnot\u001b[39;00m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39misdir(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m x), files))     \n\u001b[1;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mroot_path \u001b[38;5;241m+\u001b[39m file[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/games_dataset/'"
+     ]
+    }
+   ],
    "source": [
     "evaluator = EvaluatePositions(STOCKFISH_AVX512_EXE, chess.engine.Limit(time=0.05))\n",
     "pgn_provider_games = PGNProvider.from_dataset_tool(games_dataset_tool)"
@@ -537,10 +551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 13,
    "id": "8482fa5b-d8e2-4062-a8f1-06c16223a153",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pgn_provider_games' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data_generator \u001b[38;5;241m=\u001b[39m DataGeneratorPGN(eval_dataset_tool, evaluator, \u001b[43mpgn_provider_games\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pgn_provider_games' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data_generator = DataGeneratorPGN(eval_dataset_tool, evaluator, pgn_provider_games)"
    ]
@@ -596,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_generator_fen = DataGeneratorFEN(eval_dataset_tool, skip=30_000_000)"
+    "data_generator_fen = DataGeneratorFEN(eval_dataset_tool, skip=6_000_000)"
    ]
   },
   {
@@ -617,7 +643,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85bc6d94d0424f8e8112aaebb736e630",
+       "model_id": "4da2500f5bb84176b97603f0aeb20440",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,15 +658,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interrupted\n",
       "Done\n",
-      "Read 1764757 positions total\n",
-      "Written 1699788 positions\n"
+      "Read 6002044 positions total\n",
+      "Written 6000000 positions\n"
      ]
     }
    ],
    "source": [
-    "data_generator_fen.write(eval_dataset_tool.create_bitboard_path(1_000_000, 30_000_000, 0, 0), 6_000_000, 0, 9999999)"
+    "data_generator_fen.write(eval_dataset_tool.create_bitboard_path(6_000_000, 6_000_000, 0, 0), 6_000_000, 0, 9999999)"
    ]
   },
   {
